Programa.java
/* Programa.java */
/* Generated By:JavaCC: Do not edit this line. Programa.java */
import java.util.logging.*;
import java.io.*;
import java.util.ArrayList;
class Programa implements ProgramaConstants {
        /*public static void main(String[]args) throws ParseException, TokenMgrError
	{
		Programa analizador=new Programa(System.in);
		analizador.Iniciar();
	}*/

        public static void main(String[] args) {
                try {
            Programa analizador = new Programa(new BufferedReader(new FileReader("./expresiones.txt")));
            analizador.Iniciar();
                        System.out.println("No se encontraron problemas.");
        } catch (ParseException e) {
            System.err.println(e.getMessage());
                        System.out.println("El programa presenta errores.");
        }
                catch (FileNotFoundException e) {
            System.err.println(e.getMessage());
        }
         catch(TokenMgrError e){
            System.err.println(e.getMessage());
        }
    }

  static final public void Iniciar() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPORTAR:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      importarJava();
    }
    SentenciaNamespace();
    jj_consume_token(0);
}

  static final public void importarJava() throws ParseException {
    jj_consume_token(IMPORTAR);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PUNTO);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PUNTO);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    case ASTERISCO:{
      jj_consume_token(ASTERISCO);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMICOLON);
}

  static final public void SentenciaNamespace() throws ParseException {
    jj_consume_token(ESPACIONOMBRE);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(LLAVEAPERTURA);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASE:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      Produccion_Clase();
    }
    jj_consume_token(LLAVECERRADURA);
}

/* Regla de produccion de clase */
  static final public void Produccion_Clase() throws ParseException {
    jj_consume_token(CLASE);
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOSPUNTOS:{
      jj_consume_token(DOSPUNTOS);
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(LLAVEAPERTURA);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPOACCESO:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      Produccion_Metodo();
    }
    jj_consume_token(LLAVECERRADURA);
}

/* Regla de produccion de metodo */
  static final public void Produccion_Metodo() throws ParseException {
    Acceso_estatico();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPOMETODO:{
      TipoMet_identi();
      break;
      }
    case TIPODATO:{
      Declaracion_variable();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PARENTESISAPERTURA);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPODATO:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      Declaracion_variable();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        jj_consume_token(COMA);
        Declaracion_variable();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    }
    jj_consume_token(PARENTESISCERRADURA);
    jj_consume_token(LLAVEAPERTURA);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPRESION:
      case CAPTURARDATO:
      case OPERACIONESCARACTER:
      case ABRIRARCHIVO:
      case COPIARCADENA:
      case COMPARARCADENA:
      case ENCONTRARCADENA:
      case CONCATENARCADENA:
      case NUMEROALEATORIO:
      case PARENTESISAPERTURA:
      case LISTA:
      case PRIMEROLISTA:
      case ULTIMOLISTA:
      case OBTENER:
      case ASIGNAR:
      case PARA:
      case MIENTRAS:
      case CADAUNO:
      case CONDICION:
      case FLUJOCONTROL:
      case INTENTAR:
      case TIPODATO:
      case ESTRUCTURA:
      case AMPERSON:
      case CREAR:
      case USAR:
      case INSERTAR:
      case SELECCIONAR:
      case MAXIMOLISTA:
      case MINIMOLISTA:
      case QUITARESPACIOS:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      Bloque();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case REGRESAR:{
      RegresaValor();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(LLAVECERRADURA);
}

  static final public void TipoMet_identi() throws ParseException {
    jj_consume_token(TIPOMETODO);
    jj_consume_token(IDENTIFICADOR);
}

  static final public void Declaracion_variable() throws ParseException {
    jj_consume_token(TIPODATO);
    jj_consume_token(IDENTIFICADOR);
}

  static final public void Acceso_estatico() throws ParseException {
    jj_consume_token(TIPOACCESO);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ESTATICO:{
      jj_consume_token(ESTATICO);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
}

/* Regla de produccion de for */
  static final public void Instruccion_For() throws ParseException {
    jj_consume_token(PARA);
    jj_consume_token(PARENTESISAPERTURA);
    Asignacion_variable();
    jj_consume_token(SEMICOLON);
    Expresion_Booleana();
    jj_consume_token(SEMICOLON);
    Operacion_Aritmetica();
    jj_consume_token(PARENTESISCERRADURA);
    jj_consume_token(LLAVEAPERTURA);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPRESION:
      case CAPTURARDATO:
      case OPERACIONESCARACTER:
      case ABRIRARCHIVO:
      case COPIARCADENA:
      case COMPARARCADENA:
      case ENCONTRARCADENA:
      case CONCATENARCADENA:
      case NUMEROALEATORIO:
      case PARENTESISAPERTURA:
      case LISTA:
      case PRIMEROLISTA:
      case ULTIMOLISTA:
      case OBTENER:
      case ASIGNAR:
      case PARA:
      case MIENTRAS:
      case CADAUNO:
      case CONDICION:
      case FLUJOCONTROL:
      case INTENTAR:
      case TIPODATO:
      case ESTRUCTURA:
      case AMPERSON:
      case CREAR:
      case USAR:
      case INSERTAR:
      case SELECCIONAR:
      case MAXIMOLISTA:
      case MINIMOLISTA:
      case QUITARESPACIOS:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_6;
      }
      Bloque();
    }
    jj_consume_token(LLAVECERRADURA);
}

  static final public void Asignacion_variable() throws ParseException {
    Declaracion_variable();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      jj_consume_token(ASIGNACION);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMERO:
      case NUMERODEC:{
        Valores_Numericos();
        break;
        }
      case CADENA:{
        jj_consume_token(CADENA);
        break;
        }
      case BOOLEANO:{
        jj_consume_token(BOOLEANO);
        break;
        }
      case NUEVAINSTANCIA:{
        Instruccion_Arreglo();
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
}

  static final public void Valores_Numericos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMERO:{
      jj_consume_token(NUMERO);
      break;
      }
    case NUMERODEC:{
      jj_consume_token(NUMERODEC);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void Expresion_Booleana() throws ParseException {
    jj_consume_token(OPERADORRELACIONAL);
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    case NUMERO:
    case NUMERODEC:{
      Valores_Numericos();
      break;
      }
    case BOOLEANO:{
      jj_consume_token(BOOLEANO);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}
